objects/AccountLeadActivity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Lead_Activitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>abc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCRM_Owner__c</fullName>
        <formula>Owner:User.FirstName &amp;&apos; &apos;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>AccountLeadActivitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Group__c</fullName>
        <description>owner group from task</description>
        <label>Owner Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities on Non-Converted Leads</relationshipLabel>
        <relationshipName>AccountLeadActivitys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Busy Signal</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskId__c</fullName>
        <description>Id of the task from which this record is getting created.</description>
        <externalId>true</externalId>
        <label>TaskId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Click To Dial</fullName>
                </value>
                <value>
                    <fullName>Cold call</fullName>
                </value>
                <value>
                    <fullName>Dialer Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Lead Activity</label>
    <nameField>
        <displayFormat>ALN-{0000000000}</displayFormat>
        <label>Account Lead Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Lead Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>